--- a/public/defaults/pd.iem.sh-v0.1.css
+++ b/public/defaults/pd.iem.sh-v0.1.css
@@ -16,69 +16,69 @@
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-Light.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-LightItalic.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-LightItalic.woff') format('woff');
     font-weight: 300;
     font-style: italic;
 }
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-Black.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-BlackItalic.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-BlackItalic.woff') format('woff');
     font-weight: 900;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-Bold.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-BoldItalic.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-Semibold.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-Semibold.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-SemiboldItalic.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-SemiboldItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-Italic.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Lato';
-    src: url('http://pd.iem.sh/defaults/font/Lato-Regular.woff') format('woff');
+    src: url('https://pd.iem.sh/defaults/font/Lato-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
