--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
 <div class="butt">
 </div>
 <div id=corpus>
-<button class="btn-toggle-theme">&#9680;</button> <a href="{{ .Site.BaseURL }}">home</a> <a href="../index.html">up </a>
+<a href="{{ .Site.BaseURL }}">home</a> <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 
 {{ block "main" . }}{{ .Content }}{{ end}}
 
