restructured folder contents a bit
- css does into css/ folder
- javascript into js/ folder

renamed "theme" (js/css) from "pd.iem.sh" to just "pd".

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ .Page.Title }}</title>	 
 <meta http-equiv="Content-Type" content="text/html">
-<link rel="stylesheet" type="text/css" href="{{ "pd.iem.sh-v0.1.css" | absURL }}" media="screen">
+<link rel="stylesheet" type="text/css" href="{{ "css/pd-v0.1.css" | absURL }}" media="screen">
 <link rel="icon" type="image/png" href="{{ "favicon.ico" | absURL }}">  
 </head>
 <body>
@@ -22,6 +22,6 @@
 {{ block "main" . }}{{ .Content }}{{ end}}
 
 </div>
-<script src="{{ "pd.iem.sh-v0.1.js" | absURL }}"></script>
+<script src="{{ "js/pd-v0.1.js" | absURL }}"></script>
 </body>
 </html>
