--- a/static/css/pd-v0.1.css
+++ b/static/css/pd-v0.1.css
@@ -436,6 +436,11 @@ blockquote p {
   text-align: right;
 }
 
+footer {
+    text-align: right;
+    font-size: smaller;
+}
+
 
 /* responsive css for small "devices" */
 
