'home' button respects language

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<a href="{{ .Site.BaseURL }}"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <a href="#" onClick="xi18n()"><small><b>i18n</b></small></a> | <button class="btn-toggle-theme">&#9680;</button> </span>
+<a href="{{ "." | absLangURL }}"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <a href="#" onClick="xi18n()"><small><b>i18n</b></small></a> | <button class="btn-toggle-theme">&#9680;</button> </span>
 <hr style="margin: 1px 0px;">
 <p style="margin: 0px;"><small><sub>{{.File.Path}}
 <span id="xi18n" style="float:right;">
