remove md and html bolds for links (they are now handled by css)

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <br>
   <hr>
   <nav>
-    made with <a href="https://gohugo.io/" target="_blank"><strong>HUGO</strong></a>
-    | hosted at <a href="https://iem.at/" target="_blank"><strong>IEM</strong></a>
+    made with <a href="https://gohugo.io/" target="_blank">HUGO</a>
+    | hosted at <a href="https://iem.at/" target="_blank">IEM</a>
   </nav>
 </footer>
