--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,3 @@
-<a href="{{ .Site.BaseURL }}"><b>home</b></a> | <a href="../"><b>up</b> </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
+<a href="{{ .Site.BaseURL }}">home</a> | <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 <hr style="margin: 1px 0px;">
 <p style="margin: 0px;"><small><sub>{{.File.Path}}</sub></small></p>
