first draft on how to render structured data
it's ugly as hell :-) but it shows how it's to be done

--- a/layouts/objects2/single.html
+++ b/layouts/objects2/single.html
@@ -1,4 +1,56 @@
 {{ define "title" }} {{ .Site.Title }} - {{ .Page.Title }} {{ end }}
 {{ define "header"}} {{ partial "header" .}} {{ end }}
-{{ define "main"  }}                         {{ end }}
+{{ define "main"  }}
+<div id="reference">
+  {{ with .Params.inlets }}
+  <h3>INLETs</h3>
+  {{ range $elem_key, $elem_val := . }}
+    <h4>{{$elem_key}}</h4>
+    <dl>
+      {{ range $elem_definition, $elem_description := $elem_val }}
+      <dt><tt>{{$elem_definition}}</tt></dt><dd>{{$elem_description}}</dd>
+      {{ end }}
+    </dl>
+  {{ end }}
+  {{ end }}
+
+  {{ with .Params.outlets }}
+  <h3>OUTLETs</h3>
+  {{ range $elem_key, $elem_val := . }}
+    <h4>{{$elem_key}}</h4>
+    <dl>
+      {{ range $elem_definition, $elem_description := $elem_val }}
+      <dt><tt>{{$elem_definition}}</tt></dt><dd>{{$elem_description}}</dd>
+      {{ end }}
+    </dl>
+  {{ end }}
+  {{ end }}
+
+  {{ with .Params.arguments }}
+  <h3>ARGUMENTs</h3>
+  <dl>
+  {{ range $elem_definition, $elem_description := . }}
+  <dt><tt>{{$elem_definition}}</tt></dt><dd>{{$elem_description}}</dd>
+  {{ end }}
+  </dl>
+  {{ end }}
+
+  {{ with .Params.last_update }}
+  <p>Last updated for Pd-{{.}}</p>
+  {{end}}
+
+  {{ with .Params.see_also }}
+  <div id="see-also">
+    {{/* LATER use 'delimit' to generate a nicer string */}}
+    see also: {{ range . }}
+    <a href="../{{.}}">[{{.}}]</a>
+    {{end}}
+  </div>
+  {{end}}
+  <hr>
+</div>
+{{ with .Content }}
+{{ . }}
+{{ end }}
+{{ end }}
 {{ define "footer"}} {{ partial "footer" .}} {{ end }}
