micromanaging partials filesystem layout

--- a/layouts/partials/object-reference.html
+++ b/layouts/partials/object-reference.html
@@ -1,6 +1,6 @@
 <div class="object-reference">
-  {{ with .inlets }}<div id="inlets"  class="reference-iolets"><h3>INLETs </h3>{{ partial "object-iolets" .}}</div>{{ end }}
-  {{ with .outlets}}<div id="outlets" class="reference-iolets"><h3>OUTLETs</h3>{{ partial "object-iolets" .}}</div>{{ end }}
+  {{ with .inlets }}<div id="inlets"  class="reference-iolets"><h3>INLETs </h3>{{ partial "object-reference/iolets" .}}</div>{{ end }}
+  {{ with .outlets}}<div id="outlets" class="reference-iolets"><h3>OUTLETs</h3>{{ partial "object-reference/iolets" .}}</div>{{ end }}
 
   {{ with .arguments }}
   <div id="arguments"  class="reference-arguments">
