pass full context to object-reference
LATER: undo this (if we ever want to deal with leaf bundles that contain multiple object references)

--- a/layouts/objects2/single.html
+++ b/layouts/objects2/single.html
@@ -1,7 +1,7 @@
 {{ define "title" }} {{ .Site.Title }} - {{ .Page.Title }} {{ end }}
 {{ define "header"}} {{ partial "header" .}} {{ end }}
 {{ define "main"  }}
-  {{ partial "object-reference" .Params}}
+  {{ partial "object-reference" .}}
   {{ with .Content }}{{ . }}{{ end }}
 {{ end }}
 {{ define "footer"}} {{ partial "footer" .}} {{ end }}
