--- a/layouts/partials/object-reference.html
+++ b/layouts/partials/object-reference.html
@@ -1,3 +1,4 @@
+{{ with .Params }}
 <div class="object-reference">
   {{ with .inlets }}<div id="inlets"  class="reference-iolets"><h3>INLETs </h3>{{ partial "object-reference/iolets" .}}</div>{{ end }}
   {{ with .outlets}}<div id="outlets" class="reference-iolets"><h3>OUTLETs</h3>{{ partial "object-reference/iolets" .}}</div>{{ end }}
@@ -30,3 +31,4 @@
   {{end}}
   <hr>
 </div>
+{{end}}
