--- a/layouts/objects2/single.html
+++ b/layouts/objects2/single.html
@@ -1,6 +1,8 @@
 {{ define "title" }} {{ .Site.Title }} - {{ .Page.Title }} {{ end }}
 {{ define "header"}} {{ partial "header" .}} {{ end }}
 {{ define "main"  }}
+<h1><tt>[{{ .Page.Title }}]</tt></h1>
+{{.Page.Description}}
   {{ partial "object-reference" .}}
   {{ with .Content }}{{ . }}{{ end }}
 {{ end }}
