--- a/layouts/objects2/section.html
+++ b/layouts/objects2/section.html
@@ -1,6 +1,7 @@
 {{ define "title" }}{{ .Title }} | {{ .Site.Title }}{{ end }}
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
+{{ $pages := .Pages }}
 <div id="main">
   <div id="hero">
     <h1>{{.Title}}</h1>
@@ -10,14 +11,16 @@
   {{ else }}
   <div id="components">
     <div class="row gutters">
-      {{ range .Data.Pages.ByWeight }}
+      {{ range $cat := .Page.Params.pdcategories}}
+      <h3>{{$cat}}</h3>
+      {{ range where $pages "Params.pdcategory" $cat }}
       <div class="col col-4 item">
-        <a href="{{ .Permalink }}"><tt>{{ .Title }}</tt></a>
-        {{ with .Params.description }}
-        - {{ . }}
-        {{ end }}
+        <a href="{{ .Permalink }}"><tt>[{{ .Title }}]</tt></a>
+        {{ with .Params.description }} - {{ . }} {{ end }}
       </div>
-      {{ end }}
+      {{end}}
+      {{end}}
+
     </div>
   </div>
   {{ end }}
