--- a/layouts/objects/single.html
+++ b/layouts/objects/single.html
@@ -1,7 +1,7 @@
 {{ define "title" }} {{ .Site.Title }} - {{ .Page.Title }} {{ end }}
 {{ define "header"}} {{ partial "header" .}} {{ end }}
 {{ define "main"  }}
-<h1><tt>[{{ .Page.Title }}]</tt></h1>
+<h3>[{{ .Page.Title }}]</h3>
 {{.Page.Description}}
   {{ partial "object-reference" .}}
   {{ with .Content }}{{ . }}{{ end }}
