if a pd-category contains no pages, show a warning

--- a/layouts/objects/section.html
+++ b/layouts/objects/section.html
@@ -18,6 +18,8 @@
         <p style="margin: 1px"><a href="{{ .Permalink }}">[{{ .Title }}]</a>
         {{ with .Params.description }} - {{ . }} {{ end }}</p>
       </div>
+      {{else}}
+      No documented objects in this category.
       {{end}}
       {{end}}
 
