add 'methods' to front matter and finished with 'Arrays & Tables' section

--- a/layouts/partials/object-reference.html
+++ b/layouts/partials/object-reference.html
@@ -29,6 +29,17 @@
   {{ end }}
    </div>
   {{ end }}
+  
+  {{ with .methods }}
+  <div id="methods"  class="reference-flags">
+  <h4>METHODs</h4> 
+  {{ range $elem_definition, $elem_description := . }}
+  <li>
+  <mark>{{$elem_definition}}</mark> - {{$elem_description}}
+  </li>
+  {{ end }}
+   </div>
+  {{ end }}
 
   </br>
 
