--- a/layouts/objects/single.html
+++ b/layouts/objects/single.html
@@ -1,4 +1,4 @@
-{{ define "title" }} {{ .Site.Title }} - {{ .Page.Title }} {{ end }}
+{{ define "title" }} {{ .Site.Title }} - [{{ .Page.Title }}] {{ end }}
 {{ define "header"}} {{ partial "header" .}} {{ end }}
 {{ define "main"  }}
 <h3>[{{ .Page.Title }}]</h3>
