give <li> CSS and JS properties

--- a/static/css/pd-v0.1.css
+++ b/static/css/pd-v0.1.css
@@ -128,11 +128,11 @@ P.dark-theme {
 	--color: 	   #BCC0C3;
 }
 
-ul { 
+li, ul { 
 	--color: 	   #3E4349; /*#3E4349;*/
 }
 
-ul.dark-theme {
+li.dark-theme, ul.dark-theme {
 	--color: 	   #BCC0C3;
 }		
 
@@ -330,7 +330,15 @@ P {
 }
 
 ul {
-	font-size:   12.7pt;
+	font-size:   12pt;
+	text-align:  left;
+	line-height: 1.6;
+	color: var(--color);
+	line-height: 1.4em;
+}
+
+li {
+	font-size:   12pt;
 	text-align:  left;
 	line-height: 1.6;
 	color: var(--color);
