format 'no documented objects'

--- a/layouts/objects/section.html
+++ b/layouts/objects/section.html
@@ -19,7 +19,7 @@
         {{ with .Params.description }} - {{ . }} {{ end }}</p>
       </div>
       {{else}}
-      No documented objects in this category.
+      <p class="hint">No documented objects in this category yet.</p>
       {{end}}
       {{end}}
 
