include files for 'search' menu attempt

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,5 +4,6 @@
   <nav>
     made with <a href="https://gohugo.io/" target="_blank">HUGO</a>
     | hosted at <a href="https://iem.at/" target="_blank">IEM</a>
-  </nav>
+  </nav> 
 </footer>
+{{ partial "search-index.html" . }}
