first attempt of search working (but is ugly)

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
       <footer>{{ block "footer" . }}{{ end }}</footer>
     </div>
     <script src="{{ "js/pd-v0.1.js" | absURL }}"></script>
+	{{ partial "search-index.html" . }}	
   </body>
 </html>
 
