--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,4 @@
 <a href="{{ .Site.BaseURL }}">home</a> | <a href="../">up </a> <span style="float:right;"> <button class="btn-toggle-theme">&#9680;</button> </span>
 <hr style="margin: 1px 0px;">
-<p style="margin: 0px;"><small><sub>{{.File.Path}}</sub></small></p>
+<p style="margin: 0px;"><small><sub>{{.File.Path}}
+<span id="xi18n" style="float:right;"> <a href={{ "search" | absURL }}>search</a></span></sub></small></p>
