--- a/layouts/partials/search-index.html
+++ b/layouts/partials/search-index.html
@@ -1,15 +1,15 @@
 <script>
 window.store = {
     // You can specify your blog section only:
-    {{ range where .Site.Pages "Section" "blog" }}
+    {{ range .Site.Pages }}
     // For all pages in your site, use "range .Site.Pages"
     // You can use any unique identifier here
-    "{{ .Permalink }}": {
+   {{ .Permalink }}: {
         // You can customize your searchable fields using any .Page parameters
-        "title": "{{ .Title  }}",
-        "tags": [{{ range .Params.Tags }}"{{ . }}",{{ end }}],
-        "content": {{ .Content | plainify }}, // Strip out HTML tags
-        "url": "{{ .Permalink }}"
+        title: {{ .Title  }},
+        tags: [{{ range .Params.Tags }}{{ . }},{{ end }}],
+        content: {{ .Content | plainify }}, // Strip out HTML tags
+        url: {{ .Permalink }}
     },
     {{ end }}
 }
