first attempt but not working with '~' in query

--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -1,9 +1,14 @@
+{{ define "header"}} {{ partial "header" .}} {{ end }}
 {{ define "main" }}
+
 {{ partial "search-form.html" . }}
+
 
 <ul id="results">
     <li>
         Enter a keyword above to search this site.
     </li>
 </ul>
+{{ partial "search-index.html" . }}
 {{ end }}
+ 
