--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -1,3 +1,4 @@
+{{ define "title" }}{{ .Title }} | {{ .Site.Title }}{{ end }}
 {{ define "header"}} {{ partial "header" .}} {{ end }}
 {{ define "main" }}
 <br>
