make the 'public' folder browsable without a webserver

--- a/layouts/partials/object-reference.html
+++ b/layouts/partials/object-reference.html
@@ -65,7 +65,7 @@
     {{/* LATER use 'delimit' to generate a nicer string */}}
     <blockquote><p> see also:
     {{ range where (where $pages "Section" $section) "Title" "in" . }}
-    <a href="{{.Permalink}}">[{{replace .Title " " "\u00a0"}}]</a>
+    <a href="{{ partial "plink.html" . }}">[{{replace .Title " " "\u00a0"}}]</a>
     {{end}}
 	</p></blockquote>
   </div>
