--- a/static/css/pd-v0.1.css
+++ b/static/css/pd-v0.1.css
@@ -112,11 +112,11 @@ BODY.dark-theme {
 }
 
 BODY.serif {	
-	--font-family: Lato, Arial, sans-serif;
+	--font-family: Georgia, serif;
 }
 
 BODY.sans-serif {	
-	--font-family: Lato, Arial, sans-serif; 
+	--font-family: Georgia, serif;
 }
 
 
