--- a/layouts/objects/section.html
+++ b/layouts/objects/section.html
@@ -15,7 +15,13 @@
       <h3>{{$cat}}</h3>
       {{ range where $pages "Params.pdcategory" $cat }}
       <div class="col col-4 item">
-        <p style="margin: 1px"><a href="{{ .Permalink }}">[{{ .Title }}]</a>
+	  
+	  
+	  
+	 
+ 
+	  
+        <p style="margin: 1px"><a href="{{ partial "plink.html" . }}">[{{ .Title }}]</a>
         {{ with .Params.description }} - {{ . }} {{ end }}</p>
       </div>
       {{else}}
