--- a/layouts/partials/search-form.html
+++ b/layouts/partials/search-form.html
@@ -1,5 +1,5 @@
 <form id="search"
-    action='{{ with .GetPage "/search" }}{{.Permalink}}{{end}}' method="get">
+    action='{{ with .GetPage "/search" }}{{ partial "plink.html" . }}{{end}}' method="get">
     <label hidden for="search-input">Search site</label>
     <input type="text" id="search-input" name="query"
     placeholder="Type here to search">
