--- a/layouts/section/objects.html
+++ b/layouts/section/objects.html
@@ -12,7 +12,7 @@
     <div class="row gutters">
       {{ range .Data.Pages.ByWeight }}
       <div class="col col-4 item">
-        <a href="{{ .Permalink }}"><tt>{{ .Title }}</tt></a>
+        <a href="{{ partial "plink.html" . }}"><tt>{{ .Title }}</tt></a>
         {{ with .Params.description }}
         - {{ . }}
         {{ end }}
